In this commit, I enhanced the responsiveness of the website. Additionally, I am committing the changes made to the site. Moreover, I have included new responsive cards to enhance the overall user experience.

--- a/index.html
+++ b/index.html
@@ -65,9 +65,11 @@
     </section>
 
 
-  <div class="container22222">
-    <div class="aqua">
-
+  <div class="Educational_Cources">
+    <div class="Cources_Title">
+      <p class="Cources_Title_txt">სასწავლო კურსები</p>
+    </div>
+    <div class="INfo_Cards">
     </div>
   </div>
     <!--Main-->
