Completed the optimization for full responsiveness on the website and integrated a new slider.

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <header class="Header_Fixed_Navbar" aria-label="main">
       <div class="Header_Nav_align">
         <a class="Logo_x_Academy" href="https://www.tbcacademy.ge/">
-          <img src="img/TBCLOGO.png " class="Logo" alt="" />
-          <img src="img/X.png " class="X" alt="" /> აკადემია
+          <img src="img/Icons&Logos/TBCLOGO.png " class="Logo" alt="" />
+          <img src="img/Icons&Logos/X.png " class="X" alt="" /> აკადემია
         </a>
         <nav class="Main_Navigation">
           <a href="https://www.tbcacademy.ge/">მთავარი</a>
@@ -64,16 +64,35 @@
       </div>
     </section>
 
+    <!--Cources Informational Cards-->
+    <div class="Educational_Cources">
+      <div class="Cources_Title">
+        <p class="Cources_Title_txt">სასწავლო კურსები</p>
+      </div>
+      <div class="INfo_Cards"></div>
+    </div>
 
-  <div class="Educational_Cources">
-    <div class="Cources_Title">
-      <p class="Cources_Title_txt">სასწავლო კურსები</p>
-    </div>
-    <div class="INfo_Cards">
-    </div>
-  </div>
+    <!--Lider Of tbc Partners-->
+    <section class="partners-slider">
+      <button class="left-arrow hv-eff">
+        <img src="img/Icons&Logos/Left_arrow.png" alt="" />
+      </button>
+      <div class="slider_Alignment">
+        <h2 class="Partners_text">პროექტის პარტნიორები</h2>
+        <div class="partners-list fade-away"></div>
+      </div>
+      <button class="right-arrow hv-eff">
+        <img src="img/Icons&Logos/Right_arrow.png" alt="" />
+      </button>
+    </section>
+
+
+     <!--Questions Section-->
+     <section class="Questions"> 
+      <div class=""></div>
+     </section>
     <!--Main-->
 
-    <script src="script.js"></script>
+    <script src="Script/script.js"></script>
   </body>
 </html>
