Finished page and functional just adjusting visuals to be more accurate

--- a/index.html
+++ b/index.html
@@ -88,9 +88,36 @@
 
 
      <!--Questions Section-->
-     <section class="Questions"> 
-      <div class=""></div>
+     <section class="Frequently_Asked_questions"> 
+       <div class="Questions_alignment">
+         <div class="Questions_TItle">ხშირად დასმული კითხვები</div>
+         <a href="https://www.tbcacademy.ge/usaid-faq" class="all_questions">ყველა კითხვა</a>
+        </div>
+       <div class="Questions_js"></div>
      </section>
+
+
+     <!--footer-->
+     <footer class="Footer">
+      <div class="Foot_Container">
+        <div class="foot">
+          <div class="foot_1section">
+            <img src="svj/TBC_white.svg" class="foot_Logos" alt="">
+          </div>
+          <div class="foot_2section">
+           <a href="https://www.youtube.com/channel/UCGk9R2LV2ywOL80r8Xc6xtQ" target="_blank"><img src="img/Icons&Logos/fb-logo.jpeg" class="foot_Logos2"alt=""></a> 
+          <a href="https://www.facebook.com/tbcbank/" target="_blank"><img src="img/Icons&Logos/yt-logo.jpeg" class="foot_Logos2"alt=""></a> 
+          </div>
+        </div>
+        <div class="foot">
+          <p class="authority">© 2023 ყველა უფლება დაცულია</p>
+        </div>
+        <div class="foot">
+          <p class="rules">წესები და პირობები</p>
+          <button class="text_us">მოგვწერეთ</button>
+        </div>
+      </div>
+     </footer>
     <!--Main-->
 
     <script src="Script/script.js"></script>
