Finalised Project adjusted responsivity, full working functional.

--- a/index.html
+++ b/index.html
@@ -26,11 +26,10 @@
           <a href="https://www.tbcacademy.ge/usaid">TBC x USaid</a>
           <a href="https://www.tbcacademy.ge/risks-academy">რისკები</a>
         </nav>
-
         <div class="Mobile_Dropdown_Menu">
-          <img class="shortline" src="img/ShortLine.png" alt="" />
-          <img class="bigline" src="img/Longline.png" alt="" />
-          <img class="shortline short2" src="img/ShortLine.png" alt="" />
+          <img class="shortline" src="img/Icons&Logos/ShortLine.png" alt="" />
+          <img class="bigline" src="img/Icons&Logos/Longline.png" alt="" />
+          <img class="shortline short2" src="img/Icons&Logos/ShortLine.png" alt="" />
         </div>
       </div>
     </header>
@@ -74,11 +73,13 @@
 
     <!--Lider Of tbc Partners-->
     <section class="partners-slider">
+      <div class="partners_title">
+        <h2 class="Partners_text">პროექტის პარტნიორები</h2>
+      </div>
       <button class="left-arrow hv-eff">
         <img src="img/Icons&Logos/Left_arrow.png" alt="" />
       </button>
       <div class="slider_Alignment">
-        <h2 class="Partners_text">პროექტის პარტნიორები</h2>
         <div class="partners-list fade-away"></div>
       </div>
       <button class="right-arrow hv-eff">
@@ -94,6 +95,7 @@
          <a href="https://www.tbcacademy.ge/usaid-faq" class="all_questions">ყველა კითხვა</a>
         </div>
        <div class="Questions_js"></div>
+       <a href="https://www.tbcacademy.ge/usaid-faq" class="all_questions allqs2">ყველა კითხვა</a>
      </section>
 
 
